# py-stack

py-scanner/: .gitignore  README.md  py-report.json  pyproject.toml
py-scanner/examples/: repos.json  repos.txt
py-scanner/scanner/: analyser.py  cli.py  reporter.py  scanner.py
py-scanner/tech_stack_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
