[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-stack-scanner"
version = "1.0.0"
description = "Tech Stack Bulk Scanner – analyse git repositories and report their tech stack"
requires-python = ">=3.9"

[project.scripts]
scanner = "scanner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
